nes-coordinator/src/Parsers/NebulaPSL/gen/NesCEPParser.cpp

// Generated from CLionProjects/nebulastream/nes-coordinator/src/Parsers/NebulaPSL/gen/NesCEP.g4 by ANTLR 4.9.2

#include <Parsers/NebulaPSL/gen/NesCEPListener.h>
#include <Parsers/NebulaPSL/gen/NesCEPParser.h>

using namespace antlrcpp;
using namespace NES::Parsers;
using namespace antlr4;

NesCEPParser::NesCEPParser(TokenStream* input) : Parser(input) {
    _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

NesCEPParser::~NesCEPParser() { delete _interpreter; }

std::string NesCEPParser::getGrammarFileName() const { return "NesCEP.g4"; }

const std::vector<std::string>& NesCEPParser::getRuleNames() const { return _ruleNames; }

dfa::Vocabulary& NesCEPParser::getVocabulary() const { return _vocabulary; }

//----------------- QueryContext ------------------------------------------------------------------

NesCEPParser::QueryContext::QueryContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* NesCEPParser::QueryContext::EOF() { return getToken(NesCEPParser::EOF, 0); }

std::vector<NesCEPParser::CepPatternContext*> NesCEPParser::QueryContext::cepPattern() {
    return getRuleContexts<NesCEPParser::CepPatternContext>();
}

NesCEPParser::CepPatternContext* NesCEPParser::QueryContext::cepPattern(size_t i) {
    return getRuleContext<NesCEPParser::CepPatternContext>(i);
}

size_t NesCEPParser::QueryContext::getRuleIndex() const { return NesCEPParser::RuleQuery; }

void NesCEPParser::QueryContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterQuery(this);
}

void NesCEPParser::QueryContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitQuery(this);
}

NesCEPParser::QueryContext* NesCEPParser::query() {
    QueryContext* _localctx = _tracker.createInstance<QueryContext>(_ctx, getState());
    enterRule(_localctx, 0, NesCEPParser::RuleQuery);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(103);
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
            setState(102);
            cepPattern();
            setState(105);
            _errHandler->sync(this);
            _la = _input->LA(1);
        } while (_la == NesCEPParser::PATTERN);
        setState(107);
        match(NesCEPParser::EOF);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- CepPatternContext ------------------------------------------------------------------

NesCEPParser::CepPatternContext::CepPatternContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* NesCEPParser::CepPatternContext::PATTERN() { return getToken(NesCEPParser::PATTERN, 0); }

tree::TerminalNode* NesCEPParser::CepPatternContext::NAME() { return getToken(NesCEPParser::NAME, 0); }

tree::TerminalNode* NesCEPParser::CepPatternContext::SEP() { return getToken(NesCEPParser::SEP, 0); }

NesCEPParser::CompositeEventExpressionsContext* NesCEPParser::CepPatternContext::compositeEventExpressions() {
    return getRuleContext<NesCEPParser::CompositeEventExpressionsContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::FROM() { return getToken(NesCEPParser::FROM, 0); }

NesCEPParser::InputStreamsContext* NesCEPParser::CepPatternContext::inputStreams() {
    return getRuleContext<NesCEPParser::InputStreamsContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::INTO() { return getToken(NesCEPParser::INTO, 0); }

NesCEPParser::SinkListContext* NesCEPParser::CepPatternContext::sinkList() {
    return getRuleContext<NesCEPParser::SinkListContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::WHERE() { return getToken(NesCEPParser::WHERE, 0); }

NesCEPParser::WhereExpContext* NesCEPParser::CepPatternContext::whereExp() {
    return getRuleContext<NesCEPParser::WhereExpContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::WITHIN() { return getToken(NesCEPParser::WITHIN, 0); }

NesCEPParser::TimeConstraintsContext* NesCEPParser::CepPatternContext::timeConstraints() {
    return getRuleContext<NesCEPParser::TimeConstraintsContext>(0);
}

tree::TerminalNode* NesCEPParser::CepPatternContext::CONSUMING() { return getToken(NesCEPParser::CONSUMING, 0); }

NesCEPParser::OptionContext* NesCEPParser::CepPatternContext::option() { return getRuleContext<NesCEPParser::OptionContext>(0); }

tree::TerminalNode* NesCEPParser::CepPatternContext::SELECT() { return getToken(NesCEPParser::SELECT, 0); }

NesCEPParser::OutputExpressionContext* NesCEPParser::CepPatternContext::outputExpression() {
    return getRuleContext<NesCEPParser::OutputExpressionContext>(0);
}

size_t NesCEPParser::CepPatternContext::getRuleIndex() const { return NesCEPParser::RuleCepPattern; }

void NesCEPParser::CepPatternContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterCepPattern(this);
}

void NesCEPParser::CepPatternContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitCepPattern(this);
}

NesCEPParser::CepPatternContext* NesCEPParser::cepPattern() {
    CepPatternContext* _localctx = _tracker.createInstance<CepPatternContext>(_ctx, getState());
    enterRule(_localctx, 2, NesCEPParser::RuleCepPattern);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(109);
        match(NesCEPParser::PATTERN);
        setState(110);
        match(NesCEPParser::NAME);
        setState(111);
        match(NesCEPParser::SEP);
        setState(112);
        compositeEventExpressions();
        setState(113);
        match(NesCEPParser::FROM);
        setState(114);
        inputStreams();
        setState(117);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NesCEPParser::WHERE) {
            setState(115);
            match(NesCEPParser::WHERE);
            setState(116);
            whereExp();
        }
        setState(121);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NesCEPParser::WITHIN) {
            setState(119);
            match(NesCEPParser::WITHIN);
            setState(120);
            timeConstraints();
        }
        setState(125);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NesCEPParser::CONSUMING) {
            setState(123);
            match(NesCEPParser::CONSUMING);
            setState(124);
            option();
        }
        setState(129);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NesCEPParser::SELECT) {
            setState(127);
            match(NesCEPParser::SELECT);
            setState(128);
            outputExpression();
        }
        setState(131);
        match(NesCEPParser::INTO);
        setState(132);
        sinkList();

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- InputStreamsContext ------------------------------------------------------------------

NesCEPParser::InputStreamsContext::InputStreamsContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<NesCEPParser::InputStreamContext*> NesCEPParser::InputStreamsContext::inputStream() {
    return getRuleContexts<NesCEPParser::InputStreamContext>();
}

NesCEPParser::InputStreamContext* NesCEPParser::InputStreamsContext::inputStream(size_t i) {
    return getRuleContext<NesCEPParser::InputStreamContext>(i);
}

std::vector<tree::TerminalNode*> NesCEPParser::InputStreamsContext::COMMA() { return getTokens(NesCEPParser::COMMA); }

tree::TerminalNode* NesCEPParser::InputStreamsContext::COMMA(size_t i) { return getToken(NesCEPParser::COMMA, i); }

size_t NesCEPParser::InputStreamsContext::getRuleIndex() const { return NesCEPParser::RuleInputStreams; }

void NesCEPParser::InputStreamsContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterInputStreams(this);
}

void NesCEPParser::InputStreamsContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitInputStreams(this);
}

NesCEPParser::InputStreamsContext* NesCEPParser::inputStreams() {
    InputStreamsContext* _localctx = _tracker.createInstance<InputStreamsContext>(_ctx, getState());
    enterRule(_localctx, 4, NesCEPParser::RuleInputStreams);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(134);
        inputStream();
        setState(139);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == NesCEPParser::COMMA) {
            setState(135);
            match(NesCEPParser::COMMA);
            setState(136);
            inputStream();
            setState(141);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- InputStreamContext ------------------------------------------------------------------

NesCEPParser::InputStreamContext::InputStreamContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<tree::TerminalNode*> NesCEPParser::InputStreamContext::NAME() { return getTokens(NesCEPParser::NAME); }

tree::TerminalNode* NesCEPParser::InputStreamContext::NAME(size_t i) { return getToken(NesCEPParser::NAME, i); }

tree::TerminalNode* NesCEPParser::InputStreamContext::AS() { return getToken(NesCEPParser::AS, 0); }

size_t NesCEPParser::InputStreamContext::getRuleIndex() const { return NesCEPParser::RuleInputStream; }

void NesCEPParser::InputStreamContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterInputStream(this);
}

void NesCEPParser::InputStreamContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitInputStream(this);
}

NesCEPParser::InputStreamContext* NesCEPParser::inputStream() {
    InputStreamContext* _localctx = _tracker.createInstance<InputStreamContext>(_ctx, getState());
    enterRule(_localctx, 6, NesCEPParser::RuleInputStream);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(142);
        match(NesCEPParser::NAME);
        setState(145);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NesCEPParser::AS) {
            setState(143);
            match(NesCEPParser::AS);
            setState(144);
            match(NesCEPParser::NAME);
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- CompositeEventExpressionsContext ------------------------------------------------------------------

NesCEPParser::CompositeEventExpressionsContext::CompositeEventExpressionsContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

NesCEPParser::ListEventsContext* NesCEPParser::CompositeEventExpressionsContext::listEvents() {
    return getRuleContext<NesCEPParser::ListEventsContext>(0);
}

tree::TerminalNode* NesCEPParser::CompositeEventExpressionsContext::LPARENTHESIS() {
    return getToken(NesCEPParser::LPARENTHESIS, 0);
}

tree::TerminalNode* NesCEPParser::CompositeEventExpressionsContext::RPARENTHESIS() {
    return getToken(NesCEPParser::RPARENTHESIS, 0);
}

size_t NesCEPParser::CompositeEventExpressionsContext::getRuleIndex() const {
    return NesCEPParser::RuleCompositeEventExpressions;
}

void NesCEPParser::CompositeEventExpressionsContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterCompositeEventExpressions(this);
}

void NesCEPParser::CompositeEventExpressionsContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitCompositeEventExpressions(this);
}

NesCEPParser::CompositeEventExpressionsContext* NesCEPParser::compositeEventExpressions() {
    CompositeEventExpressionsContext* _localctx = _tracker.createInstance<CompositeEventExpressionsContext>(_ctx, getState());
    enterRule(_localctx, 8, NesCEPParser::RuleCompositeEventExpressions);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(148);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
            case 1: {
                setState(147);
                match(NesCEPParser::LPARENTHESIS);
                break;
            }

            default: break;
        }
        setState(150);
        listEvents();
        setState(152);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NesCEPParser::RPARENTHESIS) {
            setState(151);
            match(NesCEPParser::RPARENTHESIS);
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- WhereExpContext ------------------------------------------------------------------

NesCEPParser::WhereExpContext::WhereExpContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

NesCEPParser::ExpressionContext* NesCEPParser::WhereExpContext::expression() {
    return getRuleContext<NesCEPParser::ExpressionContext>(0);
}

size_t NesCEPParser::WhereExpContext::getRuleIndex() const { return NesCEPParser::RuleWhereExp; }

void NesCEPParser::WhereExpContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterWhereExp(this);
}

void NesCEPParser::WhereExpContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitWhereExp(this);
}

NesCEPParser::WhereExpContext* NesCEPParser::whereExp() {
    WhereExpContext* _localctx = _tracker.createInstance<WhereExpContext>(_ctx, getState());
    enterRule(_localctx, 10, NesCEPParser::RuleWhereExp);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(154);
        expression(0);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- TimeConstraintsContext ------------------------------------------------------------------

NesCEPParser::TimeConstraintsContext::TimeConstraintsContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* NesCEPParser::TimeConstraintsContext::LBRACKET() { return getToken(NesCEPParser::LBRACKET, 0); }

NesCEPParser::IntervalContext* NesCEPParser::TimeConstraintsContext::interval() {
    return getRuleContext<NesCEPParser::IntervalContext>(0);
}

tree::TerminalNode* NesCEPParser::TimeConstraintsContext::RBRACKET() { return getToken(NesCEPParser::RBRACKET, 0); }

size_t NesCEPParser::TimeConstraintsContext::getRuleIndex() const { return NesCEPParser::RuleTimeConstraints; }

void NesCEPParser::TimeConstraintsContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterTimeConstraints(this);
}

void NesCEPParser::TimeConstraintsContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitTimeConstraints(this);
}

NesCEPParser::TimeConstraintsContext* NesCEPParser::timeConstraints() {
    TimeConstraintsContext* _localctx = _tracker.createInstance<TimeConstraintsContext>(_ctx, getState());
    enterRule(_localctx, 12, NesCEPParser::RuleTimeConstraints);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(156);
        match(NesCEPParser::LBRACKET);
        setState(157);
        interval();
        setState(158);
        match(NesCEPParser::RBRACKET);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- IntervalContext ------------------------------------------------------------------

NesCEPParser::IntervalContext::IntervalContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* NesCEPParser::IntervalContext::INT() { return getToken(NesCEPParser::INT, 0); }

NesCEPParser::IntervalTypeContext* NesCEPParser::IntervalContext::intervalType() {
    return getRuleContext<NesCEPParser::IntervalTypeContext>(0);
}

tree::TerminalNode* NesCEPParser::IntervalContext::WS() { return getToken(NesCEPParser::WS, 0); }

size_t NesCEPParser::IntervalContext::getRuleIndex() const { return NesCEPParser::RuleInterval; }

void NesCEPParser::IntervalContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterInterval(this);
}

void NesCEPParser::IntervalContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitInterval(this);
}

NesCEPParser::IntervalContext* NesCEPParser::interval() {
    IntervalContext* _localctx = _tracker.createInstance<IntervalContext>(_ctx, getState());
    enterRule(_localctx, 14, NesCEPParser::RuleInterval);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(160);
        match(NesCEPParser::INT);
        setState(162);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NesCEPParser::WS) {
            setState(161);
            match(NesCEPParser::WS);
        }
        setState(164);
        intervalType();

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- IntervalTypeContext ------------------------------------------------------------------

NesCEPParser::IntervalTypeContext::IntervalTypeContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* NesCEPParser::IntervalTypeContext::QUARTER() { return getToken(NesCEPParser::QUARTER, 0); }

tree::TerminalNode* NesCEPParser::IntervalTypeContext::MONTH() { return getToken(NesCEPParser::MONTH, 0); }

tree::TerminalNode* NesCEPParser::IntervalTypeContext::DAY() { return getToken(NesCEPParser::DAY, 0); }

tree::TerminalNode* NesCEPParser::IntervalTypeContext::HOUR() { return getToken(NesCEPParser::HOUR, 0); }

tree::TerminalNode* NesCEPParser::IntervalTypeContext::MINUTE() { return getToken(NesCEPParser::MINUTE, 0); }

tree::TerminalNode* NesCEPParser::IntervalTypeContext::WEEK() { return getToken(NesCEPParser::WEEK, 0); }

tree::TerminalNode* NesCEPParser::IntervalTypeContext::SECOND() { return getToken(NesCEPParser::SECOND, 0); }

tree::TerminalNode* NesCEPParser::IntervalTypeContext::MICROSECOND() { return getToken(NesCEPParser::MICROSECOND, 0); }

size_t NesCEPParser::IntervalTypeContext::getRuleIndex() const { return NesCEPParser::RuleIntervalType; }

void NesCEPParser::IntervalTypeContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterIntervalType(this);
}

void NesCEPParser::IntervalTypeContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitIntervalType(this);
}

NesCEPParser::IntervalTypeContext* NesCEPParser::intervalType() {
    IntervalTypeContext* _localctx = _tracker.createInstance<IntervalTypeContext>(_ctx, getState());
    enterRule(_localctx, 16, NesCEPParser::RuleIntervalType);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(166);
        _la = _input->LA(1);
        if (!((((_la & ~0x3fULL) == 0)
               && ((1ULL << _la)
                   & ((1ULL << NesCEPParser::QUARTER) | (1ULL << NesCEPParser::MONTH) | (1ULL << NesCEPParser::DAY)
                      | (1ULL << NesCEPParser::HOUR) | (1ULL << NesCEPParser::MINUTE) | (1ULL << NesCEPParser::WEEK)
                      | (1ULL << NesCEPParser::SECOND) | (1ULL << NesCEPParser::MICROSECOND)))
                   != 0))) {
            _errHandler->recoverInline(this);
        } else {
            _errHandler->reportMatch(this);
            consume();
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- OptionContext ------------------------------------------------------------------

NesCEPParser::OptionContext::OptionContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* NesCEPParser::OptionContext::ALL() { return getToken(NesCEPParser::ALL, 0); }

tree::TerminalNode* NesCEPParser::OptionContext::NONE() { return getToken(NesCEPParser::NONE, 0); }

size_t NesCEPParser::OptionContext::getRuleIndex() const { return NesCEPParser::RuleOption; }

void NesCEPParser::OptionContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterOption(this);
}

void NesCEPParser::OptionContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<NesCEPListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitOption(this);
}

NesCEPParser::OptionContext* NesCEPParser::option() {
    OptionContext* _localctx = _tracker.createInstance<OptionContext>(_ctx, getState());
    enterRule(_localctx, 18, NesCEPParser::RuleOption);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(168);
        _la = _input->LA(1);
        if (!(_la == NesCEPParser::ALL

              || _la == NesCEPParser::NONE)) {
            _errHandler->recoverInline(this);
        } else {
            _errHandler->reportMatch(this);
            consume();
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- OutputExpressionContext ------------------------------------------------------------------
